# axyl-manager

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: auth.rs  bot.rs  main.rs  testing.rs  user_info.rs
