[package]
name = "axyl_manager"
version = "0.1.0"
authors = ["Nyx <nnyyxxxx@protonmail.com>", "Adam Perkowski <adas1per@protonmail.com>", "AxylOS <lead@axylprojects.dev>"]
license = "GPL-2.0"
description = "Discord bot for authentication & profile sharing between websites"
repository = "https://github.com/axyl-bots/axyl-manager.git"
readme = "readme.md"
keywords = [
    "discord",
    "bot",
    "authentication",
    "profile",
]
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"
serde_json = "1.0"
